--- a/src/components/CSS/Todo.css
+++ b/src/components/CSS/Todo.css
@@ -3,11 +3,11 @@
 }
 .todo{
     width: 400px;
-    
-    height: 600px;
+    overflow-y: auto; 
+    min-height: 600px;
     border-radius: 20px;
     background: #fff;
-  
+    margin:auto
     margin-top: 174px;
     display: flex;
     flex-direction: column;
